--- a/Dierentuin42/Dierentuin42.csproj
+++ b/Dierentuin42/Dierentuin42.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Img\" />
+  </ItemGroup>
+
 </Project>
